--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 
     <meta
       name="keywords"
-      content="compare json online, online compare json, compare json object online, json diff online"
+      content="compare json online, online compare json, compare json object online, json diff online, json compare, compare json"
     />
 
     <meta property="og:title" content="Compare JSON Online | JSON Diff Tool" />
